--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link rel="icon" type="image/png" href="cover1.ico" />
   <title>Mais où Donc?</title>
 </head>
+
 <body>
   <header>
-    <h1 class="center"><strong>Mais où Donc?</strong></h1>
+    <h1 class="center"><br /><strong>Mais où Donc?</strong></h1>
     <h4 style="margin-bottom: 0px; margin-left: 5%; font-weight: normal;"><span style="font-weight: bold">Auteure:
         </span><a id="mailto" href="mailto:jammie.lacc@outlook.com" title="Écrivez-moi"
             style="margin-bottom: 0px">Jammie Lachance-Côté</a></h4>
-    <p style="font-size: xx-small; margin-left: 17%; margin-top: 0px;">email <img src="flèche.jpg" /></p>
+    <p style="font-size: xx-small; margin-left: 17%; margin-top: 0px;">email <img src="images/flèche.jpg" /></p>
   </header>
   <nav>
     <li><a href="page4.html#page4">Chapitre 1</a></li>
@@ -28,7 +31,7 @@
     <li><a href="#">Chapitre 9</a></li>
     <li><a href="#">Chapitre 10</a></li>
   </nav>
-  <hr id="page0">
+  <hr id="page0" />
   <article id="roman">
   <div class="center">
     </h1><br /><br /><br /></h1><br /><br /><br /><h1 class="center"><a href="cover.html">Mais où Donc?</a></h1><br /><br /><br />
@@ -37,7 +40,7 @@
     <span class="tabulation">Bonne lecture à vous, lecteurs.</span><br /><br /><br /><br /><br /><br />
     <span style="text-align: left; margin-left:40px;">par <span style="color: red">Jammie Elena Lachance</span></span>
   </p><br /><br /><br /><br /><br /><br />
-  <p class="center">LES ÉDITIONS<br />
+  <p class="center last-element">LES ÉDITIONS<br />
     de mon cœur</p>
   </div><br /><br />
   <p id="page2"></p>
@@ -46,7 +49,9 @@
   <p><span style="font-style: italic">COPYRIGHT <span style="font-size: small">Les Éditions de mon cœur</span><br />
   <button class="télécharger" href="Mais où Donc.pdf" target="_blank">TÉLÉCHARGER </button></span></p>
 </footer>
-<a class="precedant" target="_self" href="cover1.html"><img src="precedant.png" title="Page précédante" /></a>
-<a class="suivant" target="_self" href="page4.html#page4"><img src="suivant.png" title="Page suivante" /></a>
+<section>
+<a class="precedant" target="_self" href="cover1.html"><img src="images/precedant.png" title="Page précédante" /></a>
+<a class="suivant" target="_self" href="page4.html#page4"><img src="images/Suivant.png" title="Page suivante" /></a>
+</section>
 </body>
 </html>
