Fixed the icon website

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <link rel="icon" type="image/png" href="cover1.ico" />
+  <link rel="icon" type="image/png" href="images/cover1.ico" />
   <title>Mais où Donc?</title>
 </head>
 
@@ -15,8 +15,7 @@
   <header>
     <h1 class="center"><br /><strong>Mais où Donc?</strong></h1>
     <h4 style="margin-bottom: 0px; margin-left: 5%; font-weight: normal;"><span style="font-weight: bold">Auteure:
-        </span><a id="mailto" href="mailto:jammie.lacc@outlook.com" title="Écrivez-moi"
-            style="margin-bottom: 0px">Jammie Lachance-Côté</a></h4>
+    </span><a id="mailto" href="mailto:jammie.lacc@outlook.com" title="Écrivez-moi" style="margin-bottom: 0px">Jammie Lachance-Côté</a></h4>
     <p style="font-size: xx-small; margin-left: 17%; margin-top: 0px;">email <img src="images/flèche.jpg" /></p>
   </header>
   <nav>
