--- a/page7.html
+++ b/page7.html
@@ -6,17 +6,32 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link rel="icon" type="image/png" href="images/cover1.ico" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>Mais où Donc?</title>
 </head>
 
  <body>
+   <div class="container">
   <header>
     <h1 class="center"><strong>Mais où Donc?</strong></h1>
     <h4 style="margin-bottom: 0px; margin-left: 5%; font-weight: normal;"><span style="font-weight: bold">Auteure:</span>
-      <a id="mailto" href="mailto:jammie.lacc@outlook.com" title="Écrivez-moi" style="margin-bottom: 0px">Jammie Elena Lachance</a>
+      <a id="mailto" href="mailto:jammie.lacc@outlook.com" title="Écrivez-moi">Jammie Elena Lachance</a>
     </h4>
     <p style="font-size: xx-small; margin-left: 17%; margin-top: 0px;">email <img src="images/flèche.jpg" /></p>
   </header>
+  <nav>
+    <li><a href="page4.html#page4" class="chapitre">Chapitre 1</a></li>
+    <li><a href="#">Chapitre 2</a></li>
+    <li><a href="#">Chapitre 3</a></li>
+    <li><a href="#">Chapitre 4</a></li>
+    <li><a href="#">Chapitre 5</a></li>
+    <li><a href="#">Chapitre 6</a></li>
+    <li><a href="#">Chapitre 7</a></li>
+    <li><a href="#">Chapitre 8</a></li>
+    <li><a href="#">Chapitre 9</a></li>
+    <li><a href="#">Chapitre 10</a></li>
+  </nav>
     <hr id="page7" />
     <article id="roman">
       <p class="tabulation">Je ne ferai pas de moi la pauvre et malheureuse qui a eu un accident, non.</span>
@@ -63,12 +78,19 @@
       <p id="page1">7</p>
     </article>
     <footer>
-      <p><span style="font-style: italic">COPYRIGHT <small>Les Éditions de mon cœur</small><br />
+      <div class="row">
+        <div class="col-4"><p><span style="font-style: italic">COPYRIGHT <small>Les Éditions de mon cœur</small></div>
+        <div class="col-5" style="margin-left: 30px;"><span id="day"></span>, le <span id="date"></span> <span id="month"></span> à <span id="hour"></span>h<span id="minutes"></span><br /></div>
+      </div>
       <button class="télécharger" href="Mais où Donc.pdf" target="_blank">TÉLÉCHARGER </button></span></p>
     </footer>
     <section>
       <a href="page6.html#page6" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
       <a href="page8.html#page8" class="suivant"><img src="images/suivant.png" title="Page suivante" alt="Suivant" /></a>
     </section>
+    </div>
+    <script src="Script/script.js">
+
+    </script>
   </body>
 </html>
