--- a/page4.html
+++ b/page4.html
@@ -6,77 +6,87 @@
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="icon" type="image/png" href="images/cover1.ico" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>Mais où Donc?</title>
 </head>
 
 <body>
-<header>
-  <h1 class="center"><strong>Mais où Donc?</strong></h1>
-  <h4 style="margin-bottom: 0px; margin-left: 5%; font-weight: normal;"><span style="font-weight: bold">Auteure:</span>
-    <a id="mailto" href="mailto:jammie.lacc@outlook.com" title="Écrivez-moi" style="margin-bottom: 0px">Jammie Elena Lachance</a></h4>
-  <p style="font-size: xx-small; margin-left: 17%; margin-top: 0px;">email <img src="images/flèche.jpg" /></p>
-</header>
-<nav>
-  <li><a href="page4.html#page4" class="chapitre">Chapitre 1</a></li>
-  <li><a href="#">Chapitre 2</a></li>
-  <li><a href="#">Chapitre 3</a></li>
-  <li><a href="#">Chapitre 4</a></li>
-  <li><a href="#">Chapitre 5</a></li>
-  <li><a href="#">Chapitre 6</a></li>
-  <li><a href="#">Chapitre 7</a></li>
-  <li><a href="#">Chapitre 8</a></li>
-  <li><a href="#">Chapitre 9</a></li>
-  <li><a href="#">Chapitre 10</a></li>
-</nav>
+  <div class="container">
+    <header>
+      <h1 class="center main-title"><strong>Mais où Donc?</strong></h1>
+      <h4 style="margin-left: 5%; font-weight: normal;"><span style="font-weight: bold">Auteure:</span>
+        <a id="mailto" href="mailto:jammie.lacc@outlook.com" title="Écrivez-moi" style="margin-bottom: 0px">Jammie Elena Lachance</a></h4>
+      <p style="font-size: xx-small; margin-left: 17%; margin-top: 0px;">email <img src="images/flèche.jpg" /></p>
+    </header>
+    <nav>
+      <li><a href="page4.html#page4" class="chapitre">Chapitre 1</a></li>
+      <li><a href="#">Chapitre 2</a></li>
+      <li><a href="#">Chapitre 3</a></li>
+      <li><a href="#">Chapitre 4</a></li>
+      <li><a href="#">Chapitre 5</a></li>
+      <li><a href="#">Chapitre 6</a></li>
+      <li><a href="#">Chapitre 7</a></li>
+      <li><a href="#">Chapitre 8</a></li>
+      <li><a href="#">Chapitre 9</a></li>
+      <li><a href="#">Chapitre 10</a></li>
+    </nav>
 
-<audio src="Enregistrements/page4.mp3" style="margin-right: 5%" controls></audio>
-<!--<video src="Vidéos/WIN_20220103_18_42_24_Pro.mp4" width="25%" height="25%" style="border: 3px solid black; padding-top: 1px; padding-bottom: 1px; padding-left: 2px; padding-right: 2px;" controls>Pensez à mettre à jour votre navigateur</video>
-<hr id="page4" />-->
-<article id="roman">
-  <h3><br />Chapitre 1</h3>
+    <audio src="Enregistrements/page4.mp3" style="margin-right: 5%" controls></audio>
+    <!--<video src="Vidéos/WIN_20220103_18_42_24_Pro.mp4" width="25%" height="25%" style="border: 3px solid black; padding-top: 1px; padding-bottom: 1px; padding-left: 2px; padding-right: 2px;" controls>Pensez à mettre à jour votre navigateur</video>
+    <hr id="page4" />-->
+    <article id="roman">
+      <h3><br />Chapitre 1</h3>
 
-  <p class="tabulation first-element"><span style="font-size: x-large;">L</span>es allées et venues, les parcours et détours, la
-    chasse et la guerre! Je ne sais
-    plus que faire... À la recherche d'un point . Mais tout le temps, sans cesse, je ne
-    vois que des virgules , que dois-je en faire? Que se passe-t-il? Ma vie devient
-    compliquée. Tout semble se compliquer au simple touché d'une de mes actions!
-    De la mort, de la souffrance, je vois de tout! Et l'amour, où est-il dans tout ça,
-    hein?</p>
+      <p class="tabulation first-element"><span style="font-size: x-large;">L</span>es allées et venues, les parcours et détours, la
+        chasse et la guerre! Je ne sais
+        plus que faire... À la recherche d'un point . Mais tout le temps, sans cesse, je ne
+        vois que des virgules , que dois-je en faire? Que se passe-t-il? Ma vie devient
+        compliquée. Tout semble se compliquer au simple touché d'une de mes actions!
+        De la mort, de la souffrance, je vois de tout! Et l'amour, où est-il dans tout ça,
+        hein?</p>
 
-  <p><span style="font-style: italic">Hehe!</span><br />
-    Bon, OK...</p>
+      <p><span style="font-style: italic">Hehe!</span><br />
+        Bon, OK...</p>
 
-  <p class="tabulation">Une autre journée s'est passée. Et une de plus! Je me sens si bien... mais si
-    mal en même temps! Tous mes jours se ressemblent. Va-t-on nous rendre?
-    Allons-nous finir par faire de la Terre un monde autre que le jeu d'enfants qu'elle
-    est actuellement? Vous vous trouvez sur un terrain de jeu en train de lire une
-    partie de mon histoire. Une histoire à en couper le souffle!.. Et alors?</p>
+      <p class="tabulation">Une autre journée s'est passée. Et une de plus! Je me sens si bien... mais si
+        mal en même temps! Tous mes jours se ressemblent. Va-t-on nous rendre?
+        Allons-nous finir par faire de la Terre un monde autre que le jeu d'enfants qu'elle
+        est actuellement? Vous vous trouvez sur un terrain de jeu en train de lire une
+        partie de mon histoire. Une histoire à en couper le souffle!.. Et alors?</p>
 
-  <p class="tabulation">Les lumières se ferment, les bougies s'éteignent, les fantômes sortent pour
-    vous manger..! Bon OK, peut-être que j'en mets un peu trop!</p>
+      <p class="tabulation">Les lumières se ferment, les bougies s'éteignent, les fantômes sortent pour
+        vous manger..! Bon OK, peut-être que j'en mets un peu trop!</p>
 
-  <p class="tabulation">Mais je suis là, OK. Je ne comprends plus rien, OK. Je veux vivre, hum...
-    OK. Et avoir une vie, __ c'est là que ça se complique. Je ne sais plus ce que je suis.
-    C'est bien beau, là. Je suis une femme de 28 ans. Je suis une française Québécoise.
-    Mais j'ai eu de telles expériences... Saurai-je? Pourrai-je? Devrai-je?
-    J'ai eu un accident et c'est là que tu te rends compte des difficultés de la
-    vie. On se demande: Est-ce que j'existe? Quels sont mes buts dans la vie? Où
-    j'irai? ou bien Où est-ce que je bâtirai ma vie?</p>
+      <p class="tabulation">Mais je suis là, OK. Je ne comprends plus rien, OK. Je veux vivre, hum...
+        OK. Et avoir une vie, __ c'est là que ça se complique. Je ne sais plus ce que je suis.
+        C'est bien beau, là. Je suis une femme de 28 ans. Je suis une française Québécoise.
+        Mais j'ai eu de telles expériences... Saurai-je? Pourrai-je? Devrai-je?
+        J'ai eu un accident et c'est là que tu te rends compte des difficultés de la
+        vie. On se demande: Est-ce que j'existe? Quels sont mes buts dans la vie? Où
+        j'irai? ou bien Où est-ce que je bâtirai ma vie?</p>
 
-  <p class="tabulation">Je veux parcourir... Parcourir, hein? J'irai parcourir jusqu'à mon lit ce soir.
-    Ce sera une victoire! Non... Au grand Non! Moi, je veux plus. De l'impression,
-    quelque chose d'impressionnant. Comme tu voyages grâce à tes yeux; j'ai vu..!
-    Grâce à plus que mes yeux... Je peux! Maintenant, seul l'impossible est
-    impossible.</p>
-    <p id="page2">4</p>
-  </article>
-<footer>
-  <p><span style="font-style: italic">COPYRIGHT <small>Les Éditions de mon cœur</small><br />
-  <button class="télécharger" href="Mais où Donc.pdf" target="_blank">TÉLÉCHARGER </button></span></p>
-</footer>
-<section>
-  <a href="index.html#page0" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
-  <a href="page5.html#page5" class="suivant"><img src="images/Suivant.png" title="Page suivante" alt="Suivant" /></a>
-</section>
+      <p class="tabulation">Je veux parcourir... Parcourir, hein? J'irai parcourir jusqu'à mon lit ce soir.
+        Ce sera une victoire! Non... Au grand Non! Moi, je veux plus. De l'impression,
+        quelque chose d'impressionnant. Comme tu voyages grâce à tes yeux; j'ai vu..!
+        Grâce à plus que mes yeux... Je peux! Maintenant, seul l'impossible est
+        impossible.</p>
+        <p id="page2">4</p>
+      </article>
+      <footer>
+        <div class="row">
+          <div class="col-4"><p><span style="font-style: italic">COPYRIGHT <small>Les Éditions de mon cœur</small></div>
+          <div class="col-5" style="margin-left: 30px;"><span id="day"></span>, le <span id="date"></span> <span id="month"></span> à <span id="hour"></span>h<span id="minutes"></span><br /></div>
+        </div>
+        <button class="télécharger" href="Mais où Donc.pdf" target="_blank">TÉLÉCHARGER </button></span></p>
+      </footer>
+      <section>
+        <a href="index.html#page0" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
+        <a href="page5.html#page5" class="suivant"><img src="images/Suivant.png" title="Page suivante" alt="Suivant" /></a>
+      </section>
+      <script src="Script/script.js">
+
+    </script>
+  </div>
 </body>
 </html>
