Correct some display bugs

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <div class="container">
   <header>
     <h1 class="center"><br /><strong>Mais où Donc?</strong></h1>
     <h4 style="margin-bottom: 0px; margin-left: 5%; font-weight: normal;"><span style="font-weight: bold">Auteure:
@@ -43,14 +44,19 @@
     de mon cœur</p>
   </div><br /><br />
   <p id="page2"></p>
-</article>
-<footer>
-  <p><span style="font-style: italic">COPYRIGHT <span style="font-size: small">Les Éditions de mon cœur</span><br />
-  <button class="télécharger" href="Mais où Donc.pdf" target="_blank">TÉLÉCHARGER </button></span></p>
-</footer>
-<section>
-<a class="precedant" target="_self" href="cover1.html"><img src="images/precedant.png" title="Page précédante" /></a>
-<a class="suivant" target="_self" href="page4.html#page4"><img src="images/Suivant.png" title="Page suivante" /></a>
-</section>
+  </article>
+  <footer>
+    <div class="row">
+      <div class="col-4"><p><span style="font-style: italic">COPYRIGHT <small>Les Éditions de mon cœur</small></div>
+      <div class="col-5" style="margin-left: 30px;"><span id="day"></span>, le <span id="date"></span> <span id="month"></span> à <span id="hour"></span>h<span id="minutes"></span><br /></div>
+    </div>
+    <button class="télécharger" href="Mais où Donc.pdf" target="_blank">TÉLÉCHARGER </button></span></p>
+  </footer>
+  <section>
+    <a class="precedant" target="_self" href="cover1.html"><img src="images/precedant.png" title="Page précédante" /></a>
+    <a class="suivant" target="_self" href="page4.html#page4"><img src="images/Suivant.png" title="Page suivante" /></a>
+  </section>
+  </div>
+  <script src="Script/script.js"></script>
 </body>
 </html>
