--- a/page8.html
+++ b/page8.html
@@ -14,9 +14,9 @@
 <body>
   <div class="container">
 <header>
-  <h1 class="center"><strong>Mais où Donc?</strong></h1>
-  <h4 style="margin-bottom: 0px; margin-left: 5%; font-weight: normal;"><span style="font-weight: bold">Auteure:</span>
-    <a id="mailto" href="mailto:jammie.lacc@outlook.com" title="Écrivez-moi">Jammie Elena Lachance</a>
+  <h1 class="center"><strong>Mais où Donc?</strong></h1><br />
+  <h4 class="auteure">Auteure:
+    <a id="mailto" href="mailto:jammie.lacc@outlook.com" title="Écrivez-moi" style="font-weight: bold;">Jammie Elena Lachance</a>
   </h4>
   <p style="font-size: xx-small; margin-left: 17%; margin-top: 0px;">email <img src="images/flèche.jpg" /></p>
 </header>
@@ -76,7 +76,7 @@
   </article>
   <footer>
     <div class="row">
-      <div class="col-4"><p><span style="font-style: italic">COPYRIGHT <small>Les Éditions de mon cœur</small></div>
+      <div class="col-5"><p><span style="font-style: italic">COPYRIGHT <small>Les Éditions de mon cœur</small></div>
       <div class="col-5" style="margin-left: 30px;"><span id="day"></span>, le <span id="date"></span> <span id="month"></span> à <span id="hour"></span>h<span id="minutes"></span><br /></div>
     </div>
     <button class="télécharger" href="Mais où Donc.pdf" target="_blank">TÉLÉCHARGER</button></span></p>
