--- a/page6.html
+++ b/page6.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
   <header>
-    <h1 class="center"><strong>Mais où Donc?</strong></h1>
+    <h1 class="center"><strong>Mais où Donc?</strong></h1><br />
     <h4 style="margin-bottom: 0px; margin-left: 5%; font-weight: normal;"><span style="font-weight: bold">Auteure:</span>
       <a id="mailto" href="mailto:jammie.lacc@outlook.com" title="Écrivez-moi" style="margin-bottom: 0px">Jammie Elena Lachance</a>
     </h4>
@@ -78,14 +78,14 @@
   </article>
   <footer>
     <div class="row">
-      <div class="col-4"><p><span style="font-style: italic">COPYRIGHT <small>Les Éditions de mon cœur</small></div>
+      <div class="col-5"><p><span style="font-style: italic">COPYRIGHT <small>Les Éditions de mon cœur</small></div>
       <div class="col-5" style="margin-left: 30px;"><span id="day"></span>, le <span id="date"></span> <span id="month"></span> à <span id="hour"></span>h<span id="minutes"></span><br /></div>
     </div>
     <button class="télécharger" href="Mais où Donc.pdf" target="_blank">TÉLÉCHARGER </button></span></p>
   </footer>
   <section>
-    <a href="page5.html#page5" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
-    <a href="page7.html#page7" class="suivant"><img src="images/suivant.png" title="Page suivante" alt="Suivant" /></a>
+    <a href="page5.html#page7" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
+    <a href="page7.html#page5" class="suivant"><img src="images/suivant.png" title="Page suivante" alt="Suivant" /></a>
   </section>
   </div>
   <script src="Script/script.js"></script>
