--- a/page8.html
+++ b/page8.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="container">
+<div class="container">
 <header>
   <h1 class="center"><strong>Mais où Donc?</strong></h1><br />
   <h4 class="auteure">Auteure:
@@ -22,7 +22,7 @@
 </header>
 <nav>
   <li><a href="page4.html#page4" class="chapitre">Chapitre 1</a></li>
-  <li><a href="#">Chapitre 2</a></li>
+  <li><a href="page10.html#page10">Chapitre 2</a></li>
   <li><a href="#">Chapitre 3</a></li>
   <li><a href="#">Chapitre 4</a></li>
   <li><a href="#">Chapitre 5</a></li>
