--- a/page6.html
+++ b/page6.html
@@ -22,7 +22,7 @@
   </header>
   <nav>
     <li><a href="page4.html#page4" class="chapitre">Chapitre 1</a></li>
-    <li><a href="#">Chapitre 2</a></li>
+    <li><a href="page10.html#page10">Chapitre 2</a></li>
     <li><a href="#">Chapitre 3</a></li>
     <li><a href="#">Chapitre 4</a></li>
     <li><a href="#">Chapitre 5</a></li>
