Added page 11 to 14 and bootstrap on all

--- a/page10.html
+++ b/page10.html
@@ -22,8 +22,8 @@
         <p style="font-size: xx-small; margin-left: 17%; margin-top: 0px;">email <img src="images/flèche.jpg" /></p>
     </header>
     <nav>
-        <li><a href="page4.html#page4" class="chapitre">Chapitre 1</a></li>
-        <li><a href="page10.html#page10">Chapitre 2</a></li>
+        <li><a href="page4.html#page4">Chapitre 1</a></li>
+        <li><a href="page10.html#page10" class="chapitre">Chapitre 2</a></li>
         <li><a href="#">Chapitre 3</a></li>
         <li><a href="#">Chapitre 4</a></li>
         <li><a href="#">Chapitre 5</a></li>
@@ -35,7 +35,7 @@
     </nav>
     <hr id="page10" />
     <article id="roman">
-        <h3><br />Chapitre 2</h3>
+        <h3><br />Chapitre 2</h3><br /><br />
         <p class="tabulation"><span style="font-size: x-large;">U</span>ne aventure après l'autre... Qu'une seule
             question ne se pose: Que faire
             en certains cas, que faire en ces cas-là? Je suis partie d'un point où tout était
@@ -66,7 +66,7 @@
             vienne pour voir. Je me sens prête, prête à tout!!</p>
         <p style="text-align: center;">____________________</p>
         <p class="tabulation">La vie se rallume, je me rallume! Moi qui était éteinte, prête à tout faire mais
-            pourtant... sans aucun pouvoir. La vie se clarifie!! Je peux devenir autre que cette</p><br /><br /><br />
+            pourtant... sans aucun pouvoir. La vie se clarifie!! Je peux devenir autre que cette</p><br />
 
         <p id="page2">10</p>
     </article>
@@ -75,22 +75,26 @@
             <div class="col-5">
                 <p><span style="font-style: italic">COPYRIGHT <small>Les Éditions de mon cœur</small>
             </div>
-            <div class="col-5" style="margin-left: 30px;"><span id="day"></span>, le <span id="date"></span> <span
-                    id="month"></span> à
-                <span id="hour"></span>h<span id="minutes"></span><br />
+            <div class="col-5" style="margin-left: 30px;"><span id="day"></span>, le <span id="date"></span> <span id="month"></span>
+                 à <span id="hour"></span>h<span id="minutes"></span><br />
             </div>
         </div>
         <button class="télécharger" href="Mais où Donc.pdf" target="_blank">TÉLÉCHARGER</button></span></p>
     </footer>
     <section>
-        <a href="page9.html#page9" class="precedant"><img src="images/precedant.png" title="Page précédante"
-                alt="Précédant" /></a>
-        <a href="page11.html#page11" class="suivant"><img src="images/suivant.png" title="Page suivante"
-                alt="Suivant" /></a>
+        <div class="row">
+            <div class="col-7">
+                <a href="page9.html#page9" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
+            </div>
+            <div clas="col-5">
+                <a href="page11.html#page11" class="suivant"><img src="images/suivant.png" title="Page suivante" alt="Suivant" /></a>
+            </div>
+        </div>
     </section>
     <script src="Script/script.js">
 
     </script>
+    </div>
 </body>
 
 </html>
