--- a/page4.html
+++ b/page4.html
@@ -22,7 +22,7 @@
     <nav>
       <li><a href="page4.html#page4" class="chapitre">Chapitre 1</a></li>
       <li><a href="page10.html#page10">Chapitre 2</a></li>
-      <li><a href="#">Chapitre 3</a></li>
+      <li><a href="page13.html#page13">Chapitre 3</a></li>
       <li><a href="#">Chapitre 4</a></li>
       <li><a href="#">Chapitre 5</a></li>
       <li><a href="#">Chapitre 6</a></li>
@@ -81,8 +81,15 @@
         <button class="télécharger" href="Mais où Donc.pdf" target="_blank">TÉLÉCHARGER </button></span></p>
       </footer>
       <section>
-        <a href="index.html#page0" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
-        <a href="page5.html#page5" class="suivant"><img src="images/Suivant.png" title="Page suivante" alt="Suivant" /></a>
+        <div class="row">
+          <div class="col-7">
+            <a href="index.html#page0" class="precedant"><img src="images/precedant.png" title="Page précédante"
+                alt="Précédant" /></a>
+          </div>
+          <div clas="col-5">
+            <a href="page5.html#page5" class="suivant"><img src="images/suivant.png" title="Page suivante" alt="Suivant" /></a>
+          </div>
+        </div>
       </section>
       <script src="Script/script.js">
 
