--- a/page6.html
+++ b/page6.html
@@ -13,26 +13,29 @@
 
 <body>
   <div class="container">
-  <header>
-    <h1 class="center"><strong>Mais où Donc?</strong></h1><br />
-    <h4 style="margin-bottom: 0px; margin-left: 5%; font-weight: normal;"><span style="font-weight: bold">Auteure:</span>
-      <a id="mailto" href="mailto:jammie.lacc@outlook.com" title="Écrivez-moi" style="margin-bottom: 0px">Jammie Elena Lachance</a>
-    </h4>
-    <p style="font-size: xx-small; margin-left: 17%; margin-top: 0px;">email <img src="images/flèche.jpg" /></p>
-  </header>
-  <nav>
-    <li><a href="page4.html#page4" class="chapitre">Chapitre 1</a></li>
-    <li><a href="page10.html#page10">Chapitre 2</a></li>
-    <li><a href="#">Chapitre 3</a></li>
-    <li><a href="#">Chapitre 4</a></li>
-    <li><a href="#">Chapitre 5</a></li>
-    <li><a href="#">Chapitre 6</a></li>
-    <li><a href="#">Chapitre 7</a></li>
-    <li><a href="#">Chapitre 8</a></li>
-    <li><a href="#">Chapitre 9</a></li>
-    <li><a href="#">Chapitre 10</a></li>
-  </nav>
+    <header>
+      <h1 class="center"><strong>Mais où Donc?</strong></h1><br />
+      <h4 style="margin-bottom: 0px; margin-left: 5%; font-weight: normal;"><span style="font-weight: bold">Auteure:</span>
+        <a id="mailto" href="mailto:jammie.lacc@outlook.com" title="Écrivez-moi" style="margin-bottom: 0px">Jammie Elena Lachance</a>
+      </h4>
+      <p style="font-size: xx-small; margin-left: 17%; margin-top: 0px;">email <img src="images/flèche.jpg" /></p>
+    </header>
+
+    <nav>
+      <li><a href="page4.html#page4" class="chapitre">Chapitre 1</a></li>
+      <li><a href="page10.html#page10">Chapitre 2</a></li>
+      <li><a href="page13.html#page13">Chapitre 3</a></li>
+      <li><a href="#">Chapitre 4</a></li>
+      <li><a href="#">Chapitre 5</a></li>
+      <li><a href="#">Chapitre 6</a></li>
+      <li><a href="#">Chapitre 7</a></li>
+      <li><a href="#">Chapitre 8</a></li>
+      <li><a href="#">Chapitre 9</a></li>
+      <li><a href="#">Chapitre 10</a></li>
+    </nav>
+
   <hr id="page6" />
+
   <article id="roman">
     <p>Toujours là au bon moment, telle qu'on les aime. À vrai dire, c'est vraiment
       ma meilleure copine. Grâce à mon nouveau regard, je peux voir la vie telle qu'elle
@@ -76,6 +79,7 @@
       mot qui est pour moi magique, révélateur, et… Hum? Et, et!</p><br /><br />
     <p id="page2">6</p>
   </article>
+
   <footer>
     <div class="row">
       <div class="col-5"><p><span style="font-style: italic">COPYRIGHT <small>Les Éditions de mon cœur</small></div>
@@ -83,9 +87,16 @@
     </div>
     <button class="télécharger" href="Mais où Donc.pdf" target="_blank">TÉLÉCHARGER </button></span></p>
   </footer>
+  
   <section>
-    <a href="page5.html#page7" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
-    <a href="page7.html#page5" class="suivant"><img src="images/suivant.png" title="Page suivante" alt="Suivant" /></a>
+    <div class="row">
+      <div class="col-7">
+        <a href="page5.html#page5" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
+      </div>
+      <div clas="col-5">
+        <a href="page7.html#page7" class="suivant"><img src="images/suivant.png" title="Page suivante" alt="Suivant" /></a>
+      </div>
+    </div>
   </section>
   </div>
   <script src="Script/script.js"></script>
