--- a/page8.html
+++ b/page8.html
@@ -82,8 +82,14 @@
     <button class="télécharger" href="Mais où Donc.pdf" target="_blank">TÉLÉCHARGER</button></span></p>
   </footer>
   <section>
-    <a href="page7.html#page7" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
-    <a href="page9.html#page9" class="suivant"><img src="images/suivant.png" title="Page suivante" alt="Suivant" /></a>
+    <div class="row">
+      <div class="col-7">
+        <a href="page7.html#page7" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
+      </div>
+      <div clas="col-5">
+        <a href="page9.html#page9" class="suivant"><img src="images/suivant.png" title="Page suivante" alt="Suivant" /></a>
+      </div>
+    </div>
   </section>
   <script src="Script/script.js">
 
