--- a/page9.html
+++ b/page9.html
@@ -67,19 +67,26 @@
         <div class="col-5">
             <p><span style="font-style: italic">COPYRIGHT <small>Les Éditions de mon cœur</small>
         </div>
-        <div class="col-5" style="margin-left: 30px;"><span id="day"></span>, le <span id="date"></span> <span id="month"></span> à 
-            <span id="hour"></span>h<span id="minutes"></span><br /></div>
+        <div class="col-5" style="margin-left: 30px;">
+            <span id="day"></span>, le <span id="date"></span> <span id="month"></span> à <span id="hour"></span>h<span id="minutes"></span><br />
         </div>
+    </div>
     <button class="télécharger" href="Mais où Donc.pdf" target="_blank">TÉLÉCHARGER</button></span></p>
     </footer>
     <section>
-        <a href="page8.html#page8" class="precedant"><img src="images/precedant.png" title="Page précédante"
-                alt="Précédant" /></a>
-        <a href="page10.html#page10" class="suivant"><img src="images/suivant.png" title="Page suivante" alt="Suivant" /></a>
+    <div class="row">
+        <div class="col-7">
+            <a href="page8.html#page8" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
+        </div>
+        <div clas="col-4">
+            <a href="page10.html#page10" class="suivant"><img src="images/suivant.png" title="Page suivante" alt="Suivant" /></a>
+        </div>
+    </div>
     </section>
     <script src="Script/script.js">
 
     </script>
+    </div>
 </body>
 
 </html>
