--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav>
     <li><a href="page4.html#page4">Chapitre 1</a></li>
     <li><a href="page10.html#page10">Chapitre 2</a></li>
-    <li><a href="#">Chapitre 3</a></li>
+    <li><a href="page13.html#page13">Chapitre 3</a></li>
     <li><a href="#">Chapitre 4</a></li>
     <li><a href="#">Chapitre 5</a></li>
     <li><a href="#">Chapitre 6</a></li>
@@ -53,8 +53,14 @@
     <button class="télécharger" href="Mais où Donc.pdf" target="_blank">TÉLÉCHARGER </button></span></p>
   </footer>
   <section>
-    <a class="precedant" target="_self" href="cover1.html"><img src="images/precedant.png" title="Page précédante" /></a>
-    <a class="suivant" target="_self" href="page4.html#page4"><img src="images/Suivant.png" title="Page suivante" /></a>
+    <div class="row">
+      <div class="col-7">
+        <a href="cover1.html" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
+      </div>
+      <div clas="col-5">
+        <a href="page4.html#page4" class="suivant"><img src="images/suivant.png" title="Page suivante" alt="Suivant" /></a>
+      </div>
+    </div>
   </section>
   </div>
   <script src="Script/script.js"></script>
