Chapter 3 and menus everywhere

--- a/page11.html
+++ b/page11.html
@@ -22,16 +22,16 @@
         <p style="font-size: xx-small; margin-left: 17%; margin-top: 0px;">email <img src="images/flèche.jpg" /></p>
     </header>
     <nav>
-        <li><a href="page4.html#page4">Chapitre 1</a></li>
-        <li><a href="page10.html#page10" class="chapitre">Chapitre 2</a></li>
-        <li><a href="#">Chapitre 3</a></li>
-        <li><a href="#">Chapitre 4</a></li>
-        <li><a href="#">Chapitre 5</a></li>
-        <li><a href="#">Chapitre 6</a></li>
-        <li><a href="#">Chapitre 7</a></li>
-        <li><a href="#">Chapitre 8</a></li>
-        <li><a href="#">Chapitre 9</a></li>
-        <li><a href="#">Chapitre 10</a></li>
+        <li><a href="page4.html#page4" title="Chapitre premier">Chapitre 1</a></li>
+        <li><a href="page10.html#page10" title="Chapitre second" class="chapitre">Chapitre 2</a></li>
+        <li><a href="page13.html#page13" title="Chapitre troisième">Chapitre 3</a></li>
+        <li><a href="page18.html#page18" title="Chapitre quatrième">Chapitre 4</a></li>
+        <li><a href="page28.html#page28" title="Chapitre cinquième">Chapitre 5</a></li>
+        <li><a href="page35.html#page35" title="Chapitre sixième">Chapitre 6</a></li>
+        <li><a href="page41.html#page41" title="Chapitre septième">Chapitre 7</a></li>
+        <li><a href="page45.html#page45" title="Chapitre huitième">Chapitre 8</a></li>
+        <li><a href="page47.html#page47" title="Chapitre neuvième">Chapitre 9</a></li>
+        <li><a href="page50.html#page50" title="Chapitre dixième">Chapitre 10</a></li>
     </nav>
     <hr id="page11" />
     <article id="roman">
