--- a/page12.html
+++ b/page12.html
@@ -22,35 +22,37 @@
         <p style="font-size: xx-small; margin-left: 17%; margin-top: 0px;">email <img src="images/flèche.jpg" /></p>
     </header>
     <nav>
-        <li><a href="page4.html#page4">Chapitre 1</a></li>
-        <li><a href="page10.html#page10" class="chapitre">Chapitre 2</a></li>
-        <li><a href="#">Chapitre 3</a></li>
-        <li><a href="#">Chapitre 4</a></li>
-        <li><a href="#">Chapitre 5</a></li>
-        <li><a href="#">Chapitre 6</a></li>
-        <li><a href="#">Chapitre 7</a></li>
-        <li><a href="#">Chapitre 8</a></li>
-        <li><a href="#">Chapitre 9</a></li>
-        <li><a href="#">Chapitre 10</a></li>
+        <li><a href="page4.html#page4" title="Chapitre premier">Chapitre 1</a></li>
+        <li><a href="page10.html#page10" title="Chapitre second" class="chapitre">Chapitre 2</a></li>
+        <li><a href="page13.html#page13" title="Chapitre troisième">Chapitre 3</a></li>
+        <li><a href="page18.html#page18" title="Chapitre quatrième">Chapitre 4</a></li>
+        <li><a href="page28.html#page28" title="Chapitre cinquième">Chapitre 5</a></li>
+        <li><a href="page35.html#page35" title="Chapitre sixième">Chapitre 6</a></li>
+        <li><a href="page41.html#page41" title="Chapitre septième">Chapitre 7</a></li>
+        <li><a href="page45.html#page45" title="Chapitre huitième">Chapitre 8</a></li>
+        <li><a href="page47.html#page47" title="Chapitre neuvième">Chapitre 9</a></li>
+        <li><a href="page50.html#page50" title="Chapitre dixième">Chapitre 10</a></li>
     </nav>
     <hr id="page12" />
     <article id="roman">
         <p class="tabulation">La chaleur se fait souffrante, les terres sont affamées, le ciel s'ennuie et
             l’eau se noie..! Que pouvons-nous faire? Je suis à la recherche d’une solution,
             mais où? Je me sens toujours la proie d’une guerre entre le haut et le bas. Entre le
-            ciel et l’enfer. Qui? Mais qui mènera cette bataille? Qui sera le vainqueur ce coup-
-            ci? Bien entendu, ce n’est pas la première fois que nous voyons ce genre de trucs.</p>
+            ciel et l’enfer. Qui? Mais qui mènera cette bataille? Qui sera le vainqueur ce coup-ci? 
+            Bien entendu, ce n’est pas la première fois que nous voyons ce genre de trucs.</p>
         <p class="tabulation">La misère se fait sentir ainsi que des sentiments qui ne peuvent être chassés...
             Il était là, si beau et si heureux. Je ressentais sa joie comme si elle était
             mienne. Je nous voyais ensemble, toujours près l’un de l'autre. On s’aimait..! Mais
             est-ce possible, me demandais-je? Cela va-t-il se produire un jour ou suis-je
             soumise à la solitude éternelle? Ça n’est pas possible et ça me fait peur! Suis-je si
-            repoussante? **Non?</p>
+            repoussante?<br />
+            <span class="citation">**Non?</span></p>
         <p class="tabulation">Pourtant c’est ce que je ressens d’après votre insouciance. Vous paraissez
             me fuir comme si je n’étais qu’une mouche! Je réunis toutes mes forces et je le dis:
             J’ai peur..! Peur de m’être refusée au simple bonheur qui a, il me semble, été
             épargné à la suite de ma mort! **De ma mort, oui, de ma mort! Je me sens morte. Je
-            SUIS morte!! <span style="font-weight: bold">**Non?</span>
+            SUIS morte!!<br />
+            <span class="citation">**Non?</span>
             <span class="tabulation">Eh bien, que suis-je alors? Je fais tout pour me sentir en vie, pour retrouver
                 de</span>
             simples parcelles de la vie. Mais que veux-tu? Je le suis, je suis morte. Morte
