--- a/page8.html
+++ b/page8.html
@@ -21,16 +21,16 @@
   <p style="font-size: xx-small; margin-left: 17%; margin-top: 0px;">email <img src="images/flèche.jpg" /></p>
 </header>
 <nav>
-  <li><a href="page4.html#page4" class="chapitre">Chapitre 1</a></li>
-  <li><a href="page10.html#page10">Chapitre 2</a></li>
-  <li><a href="#">Chapitre 3</a></li>
-  <li><a href="#">Chapitre 4</a></li>
-  <li><a href="#">Chapitre 5</a></li>
-  <li><a href="#">Chapitre 6</a></li>
-  <li><a href="#">Chapitre 7</a></li>
-  <li><a href="#">Chapitre 8</a></li>
-  <li><a href="#">Chapitre 9</a></li>
-  <li><a href="#">Chapitre 10</a></li>
+  <li><a href="page4.html#page4" title="Chapitre premier" class="chapitre">Chapitre 1</a></li>
+  <li><a href="page10.html#page10" title="Chapitre second">Chapitre 2</a></li>
+  <li><a href="page13.html#page13" title="Chapitre troisième">Chapitre 3</a></li>
+  <li><a href="page18.html#page18" title="Chapitre quatrième">Chapitre 4</a></li>
+  <li><a href="page28.html#page28" title="Chapitre cinquième">Chapitre 5</a></li>
+  <li><a href="page35.html#page35" title="Chapitre sixième">Chapitre 6</a></li>
+  <li><a href="page41.html#page41" title="Chapitre septième">Chapitre 7</a></li>
+  <li><a href="page45.html#page45" title="Chapitre huitième">Chapitre 8</a></li>
+  <li><a href="page47.html#page47" title="Chapitre neuvième">Chapitre 9</a></li>
+  <li><a href="page50.html#page50" title="Chapitre dixième">Chapitre 10</a></li>
 </nav>
   <hr id="page8" />
   <article id="roman">
@@ -52,7 +52,7 @@
     lui pour qui mon cœur brille</p><br />
   <p class="tabulation">Je ne vais pas lâcher, je ne vais pas laisser tomber. Non, mais je ne
     comprends plus rien. Je ne comprends vraiment plus Rien! Où? Mais où suis-je?
-    J'ai tâché de revenir droit à mon monde d'origine à la suite à mon accident... Mais
+    J'ai tâché de revenir droit à mon monde d'origine à la suite de mon accident... Mais
     où ai-je atterri? Je me le demande! J'avais une vie plutôt minable, oui. Sans aucun
     but, OK. Je l'ai déjà compris. Mais qu’est-ce que tu veux me faire comprendre,
     Satanée Vie!? Je m'efforce toujours de faire de mon mieux, en tout! Et regarde ce
@@ -70,8 +70,7 @@
     sans arrêt et sans stop. Tu y cours à la vitesse de l'éclair, tu te bats contre tous tes
     adversaires, contre tous ces monstres. Et finalement quoi? Tu vois, oui, tu vois.
     Grâce à de nouveaux yeux. Grâce à une nouvelle volonté, la volonté de vivre. Et
-    tout ça, qu'est-ce que ça te donne? Tu as l'impression d'avoir enfin trouvé un but
-    à ta vie, OK. Mais dès le lendemain, quel est ce but? A-t-il</p><br /><br />
+    tout ça, qu'est-ce que ça te donne? Tu as l'impression d'avoir enfin trouvé un but</p><br /><br />
     <p id="page2">8</p>
   </article>
   <footer>
