--- a/page13.html
+++ b/page13.html
@@ -21,21 +21,21 @@
         <p style="font-size: xx-small; margin-left: 17%; margin-top: 0px;">email <img src="images/flèche.jpg" /></p>
     </header>
     <nav>
-        <li><a href="page4.html#page4">Chapitre 1</a></li>
-        <li><a href="page10.html#page10">Chapitre 2</a></li>
-        <li><a href="page13.html#page13" class="chapitre">Chapitre 3</a></li>
-        <li><a href="#">Chapitre 4</a></li>
-        <li><a href="#">Chapitre 5</a></li>
-        <li><a href="#">Chapitre 6</a></li>
-        <li><a href="#">Chapitre 7</a></li>
-        <li><a href="#">Chapitre 8</a></li>
-        <li><a href="#">Chapitre 9</a></li>
-        <li><a href="#">Chapitre 10</a></li>
+        <li><a href="page4.html#page4" title="Chapitre premier">Chapitre 1</a></li>
+        <li><a href="page10.html#page10" title="Chapitre second">Chapitre 2</a></li>
+        <li><a href="page13.html#page13" title="Chapitre troisième" class="chapitre">Chapitre 3</a></li>
+        <li><a href="page18.html#page18" title="Chapitre quatrième">Chapitre 4</a></li>
+        <li><a href="page28.html#page28" title="Chapitre cinquième">Chapitre 5</a></li>
+        <li><a href="page35.html#page35" title="Chapitre sixième">Chapitre 6</a></li>
+        <li><a href="page41.html#page41" title="Chapitre septième">Chapitre 7</a></li>
+        <li><a href="page45.html#page45" title="Chapitre huitième">Chapitre 8</a></li>
+        <li><a href="page47.html#page47" title="Chapitre neuvième">Chapitre 9</a></li>
+        <li><a href="page50.html#page50" title="Chapitre dixième">Chapitre 10</a></li>
     </nav>
     <hr id="page13" />
     <article id="roman">
         <h3><br />Chapitre 3</h3>
-        <p class="tabulation"><span style="font-size: x-large;">A</span>lors que je
+        <p class="tabulation first-element"><span style="font-size: x-large;">A</span>lors que je
             réfléchissais sur tous les obstacles de la vie m'ayant atteinte, j’ai pensé à mon
             amour... Si présent en moi, telle de la détresse mais en plus
             mystérieux! Il n’arrivait pas un seul jour sans que mes pensées soient prises par
