--- a/page14.html
+++ b/page14.html
@@ -21,16 +21,16 @@
             <p style="font-size: xx-small; margin-left: 17%; margin-top: 0px;">email <img src="images/flèche.jpg" /></p>
         </header>
         <nav>
-            <li><a href="page4.html#page4">Chapitre 1</a></li>
-            <li><a href="page10.html#page10">Chapitre 2</a></li>
-            <li><a href="page13.html#page13" class="chapitre">Chapitre 3</a></li>
-            <li><a href="#">Chapitre 4</a></li>
-            <li><a href="#">Chapitre 5</a></li>
-            <li><a href="#">Chapitre 6</a></li>
-            <li><a href="#">Chapitre 7</a></li>
-            <li><a href="#">Chapitre 8</a></li>
-            <li><a href="#">Chapitre 9</a></li>
-            <li><a href="#">Chapitre 10</a></li>
+            <li><a href="page4.html#page4" title="Chapitre premier">Chapitre 1</a></li>
+            <li><a href="page10.html#page10" title="Chapitre second">Chapitre 2</a></li>
+            <li><a href="page13.html#page13" title="Chapitre troisième" class="chapitre">Chapitre 3</a></li>
+            <li><a href="page18.html#page18" title="Chapitre quatrième">Chapitre 4</a></li>
+            <li><a href="page28.html#page28" title="Chapitre cinquième">Chapitre 5</a></li>
+            <li><a href="page35.html#page35" title="Chapitre sixième">Chapitre 6</a></li>
+            <li><a href="page41.html#page41" title="Chapitre septième">Chapitre 7</a></li>
+            <li><a href="page45.html#page45" title="Chapitre huitième">Chapitre 8</a></li>
+            <li><a href="page47.html#page47" title="Chapitre neuvième">Chapitre 9</a></li>
+            <li><a href="page50.html#page50" title="Chapitre dixième">Chapitre 10</a></li>
         </nav>
     <hr id="page14" />
     <article id="roman">
@@ -87,10 +87,10 @@
     <section>
         <div class="row">
             <div class="col-7">
-                <a href="page12.html#page12" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
+                <a href="page13.html#page13" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
             </div>
             <div clas="col-5">
-                <a href="page14.html#page14" class="suivant"><img src="images/suivant.png" title="Page suivante" alt="Suivant" /></a>
+                <a href="page15.html#page15" class="suivant"><img src="images/suivant.png" title="Page suivante" alt="Suivant" /></a>
             </div>
         </div>
     </section>
@@ -98,6 +98,7 @@
     <script src="Script/script.js">
 
     </script>
+</div>
 </body>
 
 </html>
