--- a/page16.html
+++ b/page16.html
@@ -42,7 +42,7 @@
             Sûrement pas moi en tout cas! Rien n'est clair... sauf! :<br>
             <span class="expression3">Dans mon cœur, tout est clair. Mais dans le sien - Dans le tien?</span>
         </p><br />
-        <span class="tabulation" ,"expression1">Point .</span><br />
+        <span class="tabulation expression1">Point .</span><br />
         <p class="tabulation">J’ai un petit problème pour vous car certains disent aimer ça ne rien
             comprendre, et moi... Eh bien, désolée de vous l’apprendre mais ils sont
             complètement différents de moi! S’il vous plaît, apprenez-moi comment; je n’ai
